# logikit

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
logikit/: __init__.py  __init__.pyi  decorator.py  trace.py  trace.pyi
