[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logikit"
version = "0.1.0"
description = "Automatically trace function execution and generate flowcharts with a Python decorator"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rim Choi", email = "hyerimc858@gmail.com"},
]
keywords = ["decorator", "flowchart", "tracing", "visualization", "mermaid"]
urls = {Homepage = "https://github.com/rimi0108/logikit"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = ["logikit"]

[tool.setuptools.package-data]
logikit = ["py.typed"]

